added css na aplicacao

--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html lang="pt" dir="ltr">
   <head>
       <!-- </head> Importante para o navegador -->
+
     <meta charset="utf-8">
     <title>Victor Falcão</title>
     <meta name="author" content="VFS">
     <meta name="description" content="Primeira Pagina criada no curso Front-End">
+    <link rel="stylesheet" href="css/style.css">
   <body>
     <!-- Conteudo do site -->
     <header>
-      <h1>Sobre</h1>
+      <h1 class="texto-centro">Sobre</h1>
     </header>
     <section>
-      <img src="img/perfil.jpg" alt="Foto do perfil">
+      <img class="img-centro img-circle" src="img/perfil.jpg" alt="Foto do perfil">
       <p>Victor Falcão, 10º semestre de Engenharia Elétrica.</p>
       <p>Atualmente trabalho no ramo de sonorização para eventos, onde atuo como projetista.</p>
       <p>Busco novos conhecimentos na área de programação.</p>
