added js na aplicacao

--- a/index.html
+++ b/index.html
@@ -25,8 +25,32 @@
         <li>GitHub: <a target="_blank" href="https://github.com/victorfalcaoba">Clique aqui</a> </li>
       </ul>
     </section>
+    <section>
+      <h3>Mensagem</h3>
+      <form>
+        <p>
+          <label for="nome">Nome: </label>
+          <input type="text" name="" id="nome" placeholder="Carlos Silva">
+        </p>
+        <p>
+          <label for="Email">Email: </label>
+          <input type="email" name="" id="Email" placeholder="exemple@gmail.com">
+        </p>
+        <p>
+          <label for="telefone">Telefone: </label>
+          <input type="tel" name="" id="telefone" placeholder="2299996666">
+        </p>
+        <p>
+          <label for="mens">Mensagem:</label>
+          <textarea name="" id="mens" placeholder="Digite sua mensagem"></textarea>
+        </p>
+        <p>
+        <input type="submit" onclick="enviar()" value="Enviar"> </p>
+      </form>
+    </section>
     <footer>
-      <p>Desenvolvido em 2018</p>
+      <p class="texto-centro">Desenvolvido em 2018</p>
     </footer>
+    <script src="js/formulario.js"></script>
   </body>
 </html>
